<resources>
    <string name="app_name">RecipeIn</string>
    <string name="todo">TODO</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="repeat_verif">Kirim ulang kode verifikasi?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_desc">Silahkan masukan informasi anda</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="accept_terms_and_conditions">Saya menerima syarat-syarat dan ketentuan.</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="masukan_email_untuk_mengganti_password">Masukan email untuk mengganti password</string>
    <string name="kirim">Kirim</string>
    <string name="verif_desc">Silahkan masukkan kode verifikasi yang sudah dikirimkan ke johndoe@email.com</string>
    <string name="verif_code">Verifikasi code</string>
    <string name="ayo_masak_jangan_malas_sebagai_kebutuhan_sehari_hari_kamu">Ayo masak jangan malas sebagai kebutuhan sehari-hari kamu!</string>
    <string name="lanjut_sebagai_tamu">Lanjut sebagai tamu</string>
    <string name="newpass_desc">Masukkan password baru anda</string>
    <string name="masukkan_kata_sandi_baru">Masukkan kata sandi baru</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="akun">Akun</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="bahasa">Bahasa</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="kontak">Kontak</string>
    <string name="faq">FAQ</string>
    <string name="keluar">Keluar</string>
    <string name="home">Home</string>
    <string name="recipe">Recipe</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="hai_ernawati">Hai, Ernawati</string>
    <string name="kategori">Kategori</string>
    <string name="category_title">Category Title</string>
    <string name="menu_sehat">Menu Sehat</string>
    <string name="rekomendasi_menu_sehat_dan_enak">Rekomendasi menu sehat\ndan enak.</string>
    <string name="rekomendasi_makanan_mingguan">Rekomendasi Makanan Mingguan</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="by_author">by Author</string>
    <string name="rekomendasi_minuman_mingguan">Rekomendasi Minuman Mingguan</string>
    <string name="kumpulan_resep_salad_segar">Kumpulan Resep Salad Segar</string>
    <string name="buat_kalian_yang_lagi_ingin_diet">Buat Kalian yang lagi ingin diet.</string>
    <string name="by_ahsa">by Ahsa</string>
    <string name="resep_terbaru">Resep Terbaru</string>
    <string name="lebih_banyak">Lebih Banyak</string>
    <string name="search">Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="category">Category</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="by">By</string>
    <string name="name">Name</string>
    <string name="_30_menit">30 Menit</string>
    <string name="donat_kentang">Donat Kentang</string>
    <string name="resep_oleh_ernawati_diperbarui_pada_17_11_2023">Resep oleh Ernawati | Diperbarui pada 17/11/2023</string>
    <string name="desc_recipe">Donat kentang adalah sajian lezat berbentuk bulat dengan tekstur lembut, terbuat dari campuran kentang yang lezat dan digoreng hingga keemasan.</string>
    <string name="rating_count">4.5 (46)</string>
    <string name="total_review">40 Ulasan</string>
    <string name="total_image">3 Foto</string>
    <string name="persiapan_n15_menit">Persiapan \n15 Menit</string>
    <string name="memasak_n30menit">Memasak \n30Menit</string>
    <string name="total_n45menit">Total \n45Menit</string>
    <string name="portion">3 Porsi</string>
    <string name="bahan_bahan">Bahan-Bahan</string>
    <string name="langkah_langkah">Langkah-Langkah</string>
    <string name="steps">1. Letakkan seluruh bahan adonan donat dan tuangkan 150gr air.</string>
    <string name="nutrisi">Nutrisi</string>
    <string name="ulasan">Ulasan</string>
    <string name="peringkat">Peringkat*</string>
    <string name="ulasan_anda">Ulasan Anda</string>
    <string name="tambahkan_ulasan">Tambahkan Ulasan</string>
    <string name="urutkan">Urutkan</string>
    <string name="lezat_dan_cepat">Lezat dan Cepat</string>
    <string name="roti_bakar_simple">Roti Bakar Simple</string>
    <string name="tambah_resep">Tambah Resep</string>
    <string name="foto_5_5">+ Foto (5/5)</string>
    <string name="nama_resep">Nama Resep</string>
    <string name="jenis_kategori">Jenis/Kategori</string>
    <string name="waktu_persiapan">Waktu Persiapan</string>
    <string name="waktu_memasak">Waktu Memasak</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="sate">Sate</string>
    <string name="langkah">Langkah</string>

    <string-array name="category_review">
        <item>Terbaru</item>
        <item>Tidak Positif</item>
        <item>Paling Positif</item>
        <item>Paling Berguna</item>
    </string-array>
    <string name="nama">Ernawati</string>
    <string name="profile_desc">Salam hangat dari dapur yang penuh aroma dan kehangatan! Saya adalah Ernawati, seorang pecinta masakan yang selalu mencari inspirasi baru untuk menghidangkan kreasi kuliner istimewa.</string>
    <string name="resepku">Resepku</string>
    <string name="nutrisiku">Nutrisiku</string>
    <string name="kalori">Kalori</string>
    <string name="karbo">Karbo</string>
    <string name="serat">Serat</string>
    <string name="lemak">Lemak</string>
    <string name="protein">Protein</string>
    <string name="vitamin">Vitamin</string>
    <string name="firstname">Nama Depan</string>
    <string name="lastname">Nama Belakang</string>
    <string name="tglLahir">Tanggal Lahir</string>
    <string name="desc">Deskripsi</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="koleksi_resep">Koleksi Resep</string>
    <string name="simpan">Simpan</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="nutrisi_harian">Nutrisi Harian</string>
    <string name="_200_kkal">200 Kkal</string>
    <string name="_10g">10g</string>
    <string name="_100g">100g</string>
    <string name="oopss">Oopss!!</string>
    <string name="anda_belum_masuk_ayo_masuk_terlebih_dahulu">Anda belum masuk, ayo masuk terlebih dahulu</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="perbaharui_nutrisi_harian">Perbaharui Nutrisi Harian</string>
    <string name="age">Age</string>
    <string name="tb">TB</string>
    <string name="gender">Gender</string>
    <string name="bb">BB</string>
    <string name="activity">Activity</string>
    <string name="desc_kumpulan_resep_salad">Resep-resep salad sehat namun tetap nikmat \nuntuk disantap.</string>
    <string name="nasgor_enak">Nasgor Enak</string>
    <string name="desc_nasgor_enak">Resep-resep nasi goreng yang enak untuk dicoba \nketika perut kosong.</string>
    <string name="jumlah_nasgor">3 Resep</string>
    <string name="status_resep_desc">Lihat Status Resep Yang kamu Kirim</string>
    <string name="status_resep">Status Resep</string>
    <string name="rating">4.5/5</string>
    <string name="nama_folder">Nama Folder</string>
    <string name="jumlah_resep">Jumlah Resep</string>
    <string name="fullname">Fullname</string>
    <string name="masukkan_password_lama_anda">Masukkan password lama anda</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="cari_bahan">Cari Bahan</string>
    <string name="kecualikan_bahan">Kecualikan Bahan</string>
    <string name="empty">Empty</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="_500gram">500gram</string>
    <string name="instruction">Instruction</string>
    <string name="_0_kkal">0 Kkal</string>
    <string name="_0g">0g</string>
    <string name="_1_porsi">1 porsi</string>
</resources>