<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.setting.SettingFragment">

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/settings"
        android:textSize="@dimen/heading3"
        app:fontFamily="@font/nunito_extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAccountSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/account_settings"
        android:textSize="@dimen/heading4"
        app:layout_constraintBottom_toTopOf="@id/tvAccountSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettings"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvMyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/akun"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintStart_toStartOf="@+id/tvAccountSetting"
        app:layout_constraintTop_toBottomOf="@id/tvAccountSetting" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/ganti_password"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvMyProfile" />

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/notifikasi"
        android:textSize="@dimen/heading5"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintEnd_toEndOf="@+id/tvChangePassword"
        app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
        app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvNotification"
        app:layout_constraintEnd_toEndOf="@id/tvChangePassword"
        app:layout_constraintTop_toTopOf="@id/tvNotification" />

    <View
        android:id="@+id/dividerOne"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/neutral90"
        app:layout_constraintBottom_toTopOf="@id/tvMore"
        app:layout_constraintEnd_toEndOf="@id/switchNotification"
        app:layout_constraintStart_toStartOf="@id/tvNotification"
        app:layout_constraintTop_toBottomOf="@id/tvNotification" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/more"
        android:textSize="@dimen/heading4"
        app:layout_constraintBottom_toTopOf="@id/tvLanguage"
        app:layout_constraintStart_toStartOf="@id/dividerOne"
        app:layout_constraintTop_toBottomOf="@id/dividerOne"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/bahasa"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvMore" />

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/tentang_kami"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

    <TextView
        android:id="@+id/tvTermsOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/ketentuan_layanan"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvAboutUs" />

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/kebijakan_privasi"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvTermsOfService" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/kontak"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicy" />

    <TextView
        android:id="@+id/tvFAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:padding="12dp"
        android:text="@string/faq"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/tvContact" />

    <View
        android:id="@+id/dividerTwo"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/neutral90"
        app:layout_constraintBottom_toTopOf="@id/tvLogout"
        app:layout_constraintEnd_toEndOf="@id/tvFAQ"
        app:layout_constraintStart_toStartOf="@id/tvFAQ"
        app:layout_constraintTop_toBottomOf="@id/tvFAQ" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_setting_item"
        android:backgroundTint="@color/error10"
        android:padding="12dp"
        android:text="@string/keluar"
        android:textSize="@dimen/heading5"
        app:drawableRightCompat="@drawable/ic_chevron_right"
        app:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/dividerTwo" />

</androidx.constraintlayout.widget.ConstraintLayout>