<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/ivCollectionRecipe"
            android:layout_width="150dp"
            android:layout_height="168dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/img_background1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCollectionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_bold"
            android:maxLines="2"
            android:text="@string/kumpulan_resep_salad_segar"
            android:textSize="@dimen/subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivCollectionRecipe"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCollectionDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/buat_kalian_yang_lagi_ingin_diet"
            android:textSize="@dimen/body2"
            app:layout_constraintStart_toStartOf="@id/tvCollectionTitle"
            app:layout_constraintTop_toBottomOf="@id/tvCollectionTitle" />

        <TextView
            android:id="@+id/tvBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/by"
            android:textSize="@dimen/body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvName"
            app:layout_constraintStart_toStartOf="@id/tvCollectionDesc" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/name"
            android:textSize="@dimen/body2"
            app:layout_constraintBottom_toBottomOf="@id/tvBy"
            app:layout_constraintStart_toEndOf="@id/tvBy"
            app:layout_constraintTop_toTopOf="@id/tvBy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>