<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="76dp"
    tools:context=".presentation.profile.profile_signout.ProfileSignOutFragment">

    <TextView
        android:id="@+id/tvOops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/oopss"
        android:textColor="@color/error"
        android:textSize="@dimen/display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/anda_belum_masuk_ayo_masuk_terlebih_dahulu"
        android:textAlignment="center"
        android:textSize="@dimen/subheading"
        app:layout_constraintEnd_toEndOf="@id/tvOops"
        app:layout_constraintStart_toStartOf="@id/tvOops"
        app:layout_constraintTop_toBottomOf="@id/tvOops"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingVertical="12dp"
        android:text="@string/masuk"
        android:textColor="@color/neutral90"
        android:textSize="@dimen/subheading"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvOops"
        app:layout_constraintStart_toStartOf="@+id/tvOops"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/belum_punya_akun"
            android:textSize="@dimen/heading5" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/daftar"
            android:textColor="@color/secondary50"
            android:textSize="@dimen/heading5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>