<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.get_started.GetStartedFragment">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/app_name"
        android:textSize="@dimen/heading2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/ayo_masak_jangan_malas_sebagai_kebutuhan_sehari_hari_kamu"
        android:textAlignment="center"
        android:textSize="@dimen/body1"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/ivIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_illustration1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingVertical="12dp"
        android:text="@string/masuk"
        android:textColor="@color/neutral90"
        android:textSize="@dimen/subheading"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnContinueGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinueGuest"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingVertical="12dp"
        android:text="@string/lanjut_sebagai_tamu"
        android:textColor="@color/neutral90"
        android:textSize="@dimen/subheading"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>